overlays/kimawesome/mari/site/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mari-site-route
spec:
  parentRefs:
    - name: https-gateway
      namespace: kube-system
      sectionName: https-mari-wildcard
  hostnames:
    - "dra.marianacabral.odo.br"
  rules:
    - name: root
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mari-site
          port: 80
